test/e2e/testdata/preserve-route-order.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: preserve-route-order-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
  preserveRouteOrder: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-preserved-route-order
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: matched-rule-prefix
                value: /
      backendRefs:
        - name: infra-backend-v1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /specific
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: matched-rule-prefix
                value: /specific
      backendRefs:
        - name: infra-backend-v1
          port: 8080
